--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html>
   <head>
     <title> Eren C. K&#305;z&#305;lda&#287; </title>
-	<style type="text/css">
-    		body{
-    		    /* line-height: 1.5; */
-    		    padding: 4em 1em;
-    		    width:1000px;
-    		    margin-left:auto;
-    		    margin-right:auto;
-		    font-size:1.05em;
-    		}
-		li{
- 	   	    margin: .5em 0;
-		}
-	</style>
+    <style type="text/css">
+            body{
+                /* line-height: 1.5; */
+                padding: 4em 1em;
+                width:1000px;
+                margin-left:auto;
+                margin-right:auto;
+            font-size:1.05em;
+            }
+        li{
+            margin: .5em 0;
+        }
+    </style>
   </head>
   <body>
     <img src="images/eren.jpeg" style="float:right;height:250px" hspace="20px">
        <h1> Eren C. K&#305;z&#305;lda&#287; </h1>
 <address>
-e-mail : <a href="mailto:kizildag@mit.edu">kizildag@mit.edu </a>
+e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
 </address>
-    <p>
-I am a final year PhD student in the <a class="hidelink" href="https://www.eecs.mit.edu/">Department of Electrical Engineering and Computer Science (EECS)</a>  at the <a class="hidelink" href="https://mit.edu">Massachusetts Institute of Technology (MIT)</a>, where I am very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">Prof. David Gamarnik</a>. I am affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. <b>You can find my CV <a href="files/ErenCV.pdf">here.</a></b>
-    </p>
-<b> I am thrillled to join the <a href="https://stat.columbia.edu/">Department of Statistics at Columbia University</a> as a Distinguished Postdoctoral Fellow in Fall 2022.</b>
-<br>
+
+
+<p>
+    I am a Distinguished Postdoctoral Fellow at the <a href="https://stat.columbia.edu/">Department of Statistics at Columbia University.</a> I received my PhD in <a class="hidelink" href="https://www.eecs.mit.edu/">Electrical Engineering and Computer Science (EECS)</a>  at the <a class="hidelink" href="https://mit.edu">Massachusetts Institute of Technology (MIT)</a>, where I was very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">Prof. David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. <b>You can find my CV <a href="files/ErenCV.pdf">here.</a></b>
+</p>
+
     <p>
 
 <h3>Research Interests</h3>
@@ -61,7 +62,7 @@ I am a final year PhD student in the <a class="hidelink" href="https://www.eecs.
 
 <li>
 <p>
-	<b>Fall 2020</b>: I was a long-term participant at the semester program <a href="https://simons.berkeley.edu/programs/hd20">Probability, Geometry, and Computation in High Dimensions </a> in <a href="https://simons.berkeley.edu"> Simons Institute for the Theory of Computing</a> at the <a href="https://www.berkeley.edu/">University of California, Berkeley</a>.
+    <b>Fall 2020</b>: I was a long-term participant at the semester program <a href="https://simons.berkeley.edu/programs/hd20">Probability, Geometry, and Computation in High Dimensions </a> in <a href="https://simons.berkeley.edu"> Simons Institute for the Theory of Computing</a> at the <a href="https://www.berkeley.edu/">University of California, Berkeley</a>.
 </p>
 
 </ul>
@@ -73,7 +74,7 @@ I am a final year PhD student in the <a class="hidelink" href="https://www.eecs.
       <a href="https://arxiv.org/abs/2203.15667"> Algorithms and Barriers in the Symmetric Binary Perceptron Model
 </a>(<a href="files/PerceptronTalk.pdf">Slides</a>,<a href="files/PerceptronPoster.pdf">Poster</a>)
 <br>
-      <em>Preprint.</em>
+      <em>IEEE Symposium on Foundations of Computer Science (FOCS), 2022 (To appear).</em>
 <br>
        with David Gamarnik, Will Perkins, and Changji Xu.
       
@@ -95,7 +96,9 @@ I am a final year PhD student in the <a class="hidelink" href="https://www.eecs.
       <a href="https://arxiv.org/abs/2103.01369"> Algorithmic Obstructions in the Random Number Partitioning Problem (<a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar">Talk by David</a>,<a href="files/cornell_poster.pdf">Poster</a>,<a href="files/OGPinNPP.pdf">Slides</a>)
 </a>
 <br>
-      <em>Submitted.</em>
+      <em>Annals of Applied Probability (Major Revisions).</em>
+<br> <a href="https://ieeexplore.ieee.org/document/9834647
+">Conference version</a> in <I>IEEE International Symposium on Information Theory (ISIT)</I>, 2022
 <br>
              with David Gamarnik.
       
@@ -170,7 +173,7 @@ I am a proud graduate of <a href="https://en.wikipedia.org/wiki/Ankara_Science_H
 </div>
 </div>
 
-	</body>
+    </body>
 </html>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
