--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>Annals of Applied Probability (To appear), 2023</i>
 <br>
-<a href="https://arxiv.org/abs/2103.01369" target="_blank">[Paper]</a> <a href="files/OGPinNPP.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar" target="_blank">[Talk]</a> <a href="files/cornell_poster" target="_blank">[Poster]</a>
+<a href="https://arxiv.org/abs/2103.01369" target="_blank">[Paper]</a> <a href="files/OGPinNPP.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar" target="_blank">[Talk]</a> <a href="files/cornell_poster.pdf" target="_blank">[Poster]</a>
 <br>
 <a href="https://ieeexplore.ieee.org/document/9834647" target="_blank">Conference version</a> in <i>ISIT 2022</i>
 </p>
@@ -105,7 +105,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 <br>
 <i>IEEE Transactions on Signal Processing, 2022</i>
 <br>
-<a href="https://ieeexplore.ieee.org/document/9729548" target="_blank">[Paper]</a> <a href="files/ISIT2021" target="_blank">[Slides]</a> 
+<a href="https://ieeexplore.ieee.org/document/9729548" target="_blank">[Paper]</a> <a href="files/ISIT2021.pdf" target="_blank">[Slides]</a> 
 <br>
 <a href="https://ieeexplore.ieee.org/abstract/document/9517811" target="_blank">Conference version</a>  in <i>ISIT 2021</i>
 </p>
@@ -163,7 +163,7 @@ Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
 <br>
 <i>International Conference on Sampling Theory and Applications (SampTA), 2023</i>
 <br>
-<a href="https://openreview.net/forum?id=eOrFIRhZ2cj" target="_blank">[Paper]</a> 
+<a href="https://openreview.net/forum?id=eOrFIRhZ2cj" target="_blank">[Paper]</a> <a href="files/SampTAslides.pdf" target="_blank">[Slides]</a> 
 </p>
 
 <p>
@@ -173,7 +173,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Will Perkins, Changji Xu
 <br>
 <i>IEEE Symposium on Foundations of Computer Science (FOCS), 2022</i>
 <br>
-<a href="https://arxiv.org/abs/2203.15667" target="_blank">[Paper]</a> <a href="files/PerceptronTalk" target="_blank">[Slides]</a> <a href="files/PerceptronPoster" target="_blank">[Poster]</a>
+<a href="https://arxiv.org/abs/2203.15667" target="_blank">[Paper]</a> <a href="files/PerceptronTalk.pdf" target="_blank">[Slides]</a> <a href="files/PerceptronPoster.pdf" target="_blank">[Poster]</a>
 </p>
 
 
