--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ My research is broadly at the intersection of probability, statistics, theoretic
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>In preparation</i>
+<i>In preparation, 2023+</i>
 </p>
 
 
@@ -51,7 +51,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>In preparation</i>
+<i>In preparation, 2023+</i>
 </p>
 
  <p>
@@ -59,7 +59,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Under review</i>
+<i>Under review, 2023+</i>
 <br>
 <a href="https://arxiv.org/abs/2307.07461" target="_blank">[Paper]</a> 
 </p>
@@ -69,7 +69,7 @@ David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
 <br>
 Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
 <br>
-<i>Under review</i>
+<i>Under review, 2023+</i>
 </p>
 
 
