--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>Annals of Applied Probability, 2021</i>
 <br>
-<a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-31/issue-3/Computing-the-partition-function-of-the-SherringtonKirkpatrick-model-is-hard/10.1214/20-AAP1625.full" target="_blank">[Paper]</a> <a href="files/ISIT2020" target="_blank">[Slides]</a> 
+<a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-31/issue-3/Computing-the-partition-function-of-the-SherringtonKirkpatrick-model-is-hard/10.1214/20-AAP1625.full" target="_blank">[Paper]</a> <a href="files/ISIT2020.pdf" target="_blank">[Slides]</a> 
 <br>
 <a href="https://ieeexplore.ieee.org/document/9174373" target="_blank">Conference version</a> in <i>ISIT 2020</i>
 </p>
@@ -197,7 +197,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 <br>
 <i>IEEE International Symposium on Information Theory (ISIT), 2021</i>
 <br>
-<a href="https://ieeexplore.ieee.org/document/9517811" target="_blank">[Paper]</a> 
+<a href="https://ieeexplore.ieee.org/document/9517811" target="_blank">[Paper]</a> <a href="files/ISIT2021.pdf" target="_blank">[Slides]</a> 
 </p>
 
 <p>
@@ -207,7 +207,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>IEEE International Symposium on Information Theory (ISIT), 2020</i>
 <br>
-<a href="https://ieeexplore.ieee.org/document/9174373" target="_blank">[Paper]</a> 
+<a href="https://ieeexplore.ieee.org/document/9174373" target="_blank">[Paper]</a> <a href="files/ISIT2020.pdf" target="_blank">[Slides]</a> 
 </p>
 
 
@@ -219,7 +219,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>IEEE International Symposium on Information Theory (ISIT), 2019</i>
 <br>
-<a href="https://ieeexplore.ieee.org/document/8849681" target="_blank">[Paper]</a> 
+<a href="https://ieeexplore.ieee.org/document/8849681" target="_blank">[Paper]</a> <a href="files/ISIT2019.pdf" target="_blank">[Slides]</a> 
 </p>
 
 
