--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
     <p>
 
 <h2>Research Interests</h2>
-My research is broadly at the intersection of probability, statistics, theoretical computer science, and statistical physics. I am particularly interested in understanding the computational tractability of random optimization problems and models in statistical inference using insights from statistical physics.
+My research is a mix of probability, statistics and data science, and computer science. More specifically, I am interested in understanding computational tractability of random optimization problems and statistical inference models and in the mathematics of data science.
 
  <h2>Journal Papers and Preprints</h2>
 
