--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>In preparation, 2023+</i>
+<i>Under review, 2023+</i>
+<br>
+<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
 </p>
 
  <p>
