--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ My research is a mix of probability, statistics and data science, and computer s
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>In preparation, 2023+</i>
+<i>Preprint, 2023</i>
+<br>
+<a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a>
 </p>
 
 
