--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
     I am a Founder's Postdoctoral Fellow at Columbia University, <a class="hidelink" href="https://stat.columbia.edu/">Department of Statistics</a>. I received my PhD in Electrical Engineering and Computer Science from MIT, where I was very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. 
     <br><br>
     <b>I am on the 2023-2024 academic job market!</b> You can find my CV <a href="files/ErenCV.pdf"><b>here</b>.</a>
+    <br>
+    <p style="color:red;">I will give a talk at INFORMS 2023 on <b>October 16, 2:15pm</b> on Computational Limits of Random Optimization Problems; in particular how intricate geometry helps to understand the limits of efficient algorithms for certain random optimization problems.</p>
 </p>
 
     <p>
