--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
     <br><br>
     <b>I am on the 2023-2024 academic job market!</b> You can find my CV <a href="files/ErenCV.pdf"><b>here</b>.</a>
     <br>
-    <p style="color:red;">I will give a talk at INFORMS 2023 on <b>October 16, 2:15pm</b> on Computational Limits of Random Optimization Problems; in particular how intricate geometry helps to understand the limits of efficient algorithms for certain random optimization problems.</p>
+    <p style="color:red;">I'll give a talk at INFORMS 2023 on <b>October 16, 2:15pm</b> on Computational Limits of Random Optimization Problems. In particular, I'll talk about how intricate geometry helps to understand the limits of efficient algorithms for important random optimization problems.</p>
 </p>
 
     <p>
