--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 <br>
-<i>Mathematics of Operations Research (Minor Revisions), 2023+</i>
+<i>Mathematics of Operations Research (Accepted), 2023</i>
 <br>
 <a href="https://arxiv.org/abs/1912.01599" target="_blank">[Paper]</a> <a href="files/QuadraticTalk.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=iQAur0NweGw&ab_channel=MachineLearningatMIT" target="_blank">[Talk]</a>
 </p>
