--- a/files/old2.html
+++ b/files/old2.html
@@ -25,7 +25,10 @@ e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
 
 
 <p>
-    I am a Founder's Postdoctoral Fellow at Columbia University, <a class="hidelink" href="https://stat.columbia.edu/">Department of Statistics</a>. I received my PhD in Electrical Engineering and Computer Science from MIT, where I was very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. <b>You can find my CV <a href="files/ErenCV.pdf">here</a>.</b>
+    I am a Founder's Postdoctoral Fellow at Columbia University, <a class="hidelink" href="https://stat.columbia.edu/">Department of Statistics</a>. I received my PhD in Electrical Engineering and Computer Science from MIT, where I was very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. 
+    <br><br>  
+    <b><font size="+2"> I am on the 2023-2024 academic job market!</b> <br>You can find my CV <a href="files/ErenCV.pdf"><b>here</b>.</a></font>
+    <br>
 
     <p>
 
@@ -39,7 +42,7 @@ My research is a mix of probability, statistics and data science, and computer s
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Under review, 2024+</i>
+<i>Under review, 2023+</i>
 <br>
 <a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a>
 </p>
@@ -50,7 +53,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Under review, 2024+</i>
+<i>Under review, 2023+</i>
 <br>
 <a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
 </p>
@@ -60,9 +63,17 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Under review, 2024+</i>
+<i>Under review, 2023+</i>
 <br>
 <a href="https://arxiv.org/abs/2307.07461" target="_blank">[Paper]</a> 
+</p>
+
+<p>
+<strong>Symmetric Binary Perceptron with Random Labels: Capacity, Universality, and Overlap Gap Property</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
+<br>
+<i>Under review, 2023+</i>
 </p>
 
 
@@ -71,7 +82,7 @@ David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
 <br>
 David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Annals of Applied Probability, 2023</i>
+<i>Annals of Applied Probability (To appear), 2023</i>
 <br>
 <a href="https://arxiv.org/abs/2103.01369" target="_blank">[Paper]</a> <a href="files/OGPinNPP.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar" target="_blank">[Talk]</a> <a href="files/cornell_poster.pdf" target="_blank">[Poster]</a>
 <br>
@@ -85,17 +96,9 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 <br>
-<i>Mathematics of Operations Research, 2024</i>
+<i>Mathematics of Operations Research (Accepted), 2023</i>
 <br>
 <a href="https://arxiv.org/abs/1912.01599" target="_blank">[Paper]</a> <a href="files/QuadraticTalk.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=iQAur0NweGw&ab_channel=MachineLearningatMIT" target="_blank">[Talk]</a>
-</p>
-
-<p>
-<strong>Symmetric Binary Perceptron with Random Labels: Capacity, Universality, and Overlap Gap Property</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
-<br>
-<i>Preprint, 2023</i>
 </p>
 
 
@@ -145,15 +148,6 @@ Matt Emschwiller, David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 
 
  <h2>Conference Papers</h2>
-
- <p>
-<strong>A Random CSP with Connections to Discrepancy Theory and Randomized
-Trials</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>IEEE International Symposium on Information Theory (ISIT), 2024 (To Appear)</i>
-</p>
 
 <p>
 <strong>Geometric Barriers for Stable and Online Algorithms for Discrepancy Minimization</strong>
@@ -249,7 +243,7 @@ Ph.D thesis, Massachusetts Institute of Technology, 2022
 
   <h3> Other Biographical Notes </h3>
 I earned my B.S. degree with highest honors (<I>summa cum
-laude</i>) in <a href="https://ee.boun.edu.tr">Electrical and Electronics Engineering</a> from <a href="http://www.boun.edu.tr/en_US">Bogazi&#231;i University</a>, Istanbul, Turkey in 2014; and my M.S. degree in EECS from MIT in 2017. I did experimental research on magnetic resonance imaging (MRI) for my Master's thesis. Part of my thesis work appeared in the <i>24th Annual Meeting of International Society for Magnetic Resonance in Medicine (ISMRM)</i>, Singapore, 2016; and received a <a href="https://www.ismrm.org/16/program_files/O61.htm"><i>summa cum laude</i> award</a> (top 5% of all submitted works). Slides of my talk is available <a href="files/ISMRM_Slides.pdf">here</a>. 
+laude</i>) in <a href="https://ee.boun.edu.tr">electrical and electronics engineering</a> from <a href="http://www.boun.edu.tr/en_US">Bogazi&#231;i University</a>, Istanbul, Turkey in 2014; and my M.S. degree in EECS from MIT in 2017. I did experimental research on magnetic resonance imaging (MRI) for my Master's thesis. Part of my thesis work appeared in the <i>24th Annual Meeting of International Society for Magnetic Resonance in Medicine (ISMRM)</i>, Singapore, 2016; and received a <a href="https://www.ismrm.org/16/program_files/O61.htm"><i>summa cum laude</i> award</a> (top 5% of all submitted works). Slides of my talk is available <a href="files/ISMRM_Slides.pdf">here</a>. 
 <br>
 <br>
 I am a proud graduate of <a href="https://en.wikipedia.org/wiki/Ankara_Science_High_School">Ankara Science High School (AFL)</a>, class of 2010.
