--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@ e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
 
 <p>
     I am a Founder's Postdoctoral Fellow at Columbia University, <a class="hidelink" href="https://stat.columbia.edu/">Department of Statistics</a>. I received my PhD in Electrical Engineering and Computer Science from MIT, where I was very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. <b>You can find my CV <a href="files/ErenCV.pdf">here</a>.</b>
-
     <p>
 
 <h2>Research Interests</h2>
@@ -154,7 +153,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>IEEE International Symposium on Information Theory (ISIT), 2024 (To Appear)</i>
 <br>
-<a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Paper]</a> 
+<a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Papeer]</a> 
 </p>
 
 <p>
