--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>IEEE International Symposium on Information Theory (ISIT), 2024 (To Appear)</i>
 <br>
-<a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Papeer]</a> 
+<a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Paper]</a> 
 </p>
 
 <p>
