--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@ Trials</strong>
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>IEEE International Symposium on Information Theory (ISIT), 2024 (To Appear)</i>
+<i>IEEE International Symposium on Information Theory (ISIT), 2024 </i>
 <br>
-<a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Paper]</a> 
+<a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Paper]</a> <a href="files/Kizildag_ISIT_2024.pdf" target="_blank">[Slides]</a>
 </p>
 
 <p>
