--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <img src="images/eren.jpeg" style="float:right;height:250px" hspace="20px">
        <h1> Eren C. K&#305;z&#305;lda&#287; </h1>
 <address>
-e-mail : <a href="mailto:eck2170@columbia.edu">eck2170@columbia.edu </a>
+e-mail : <a href="mailto:kizildag@illinois.edu">kizildag@illinois.edu </a>
 </address>
 
 
 <p>
-    I am a Founder's Postdoctoral Fellow at Columbia University, <a class="hidelink" href="https://stat.columbia.edu/">Department of Statistics</a>. I received my PhD in Electrical Engineering and Computer Science from MIT, where I was very fortunate to be advised by <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. <b>You can find my CV <a href="files/ErenCV.pdf">here</a>.</b>
+    I am an Assistant Professor in the <a class="hidelink" href="https://stat.illinois.edu/">Department of Statistics</a> at the University of Illinois Urbana-Champaign. I am also affiliated with the <a class="hidelink" href="https://ece.illinois.edu/">Department of Electrical and Computer Engineering</a>.  
 <p>
-    I will join the <a class="hidelink" href="https://stat.illinois.edu/">Department of Statistics</a> at the University of Illinois Urbana-Champaign as an assistant professor in Fall 2024. 
+    Previously, I was a Distinguished Postdoctoral Fellow at Columbia University, <a class="hidelink" href="https://stat.columbia.edu/">Department of Statistics</a>. I received my PhD in Electrical Engineering and Computer Science from MIT under the wonderful guidance of <a class="hidelink" href="http://www.mit.edu/~gamarnik/home.html">David Gamarnik</a>. At MIT, I was affiliated with the <a class="hidelink" href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> and the <a class="hidelink" href="https://idss.mit.edu/">Institute for Data, Systems, and Society (IDSS)</a>. 
+<p>
+    <b>You can find my CV <a href="files/ErenCV.pdf">here</a>.</b>
     <p>
 
 <h2>Research Interests</h2>
