--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ e-mail : <a href="mailto:kizildag@illinois.edu">kizildag@illinois.edu </a>
     <p>
 
 <h2>Research Interests</h2>
-My research is a mix of probability, statistics and data science, and computer science. More specifically, I am interested in understanding computational tractability of random optimization problems and statistical inference models and in the mathematics of data science.
+My research is a mix of probability, statistics and data science, and computer science. I am particularly interested in understanding statistical-computational trade-offs in large scale random models, including random optimization problems and statistical inference models, as well as in the mathematics of data science.
 
  <h2>Journal Papers and Preprints</h2>
 
