--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Ph.D thesis, Massachusetts Institute of Technology, 2022
 
   <h3> Other Biographical Notes </h3>
 I earned my B.S. degree with highest honors (<I>summa cum
-laude</i>) in <a href="https://ee.boun.edu.tr">Electrical and Electronics Engineering</a> from <a href="http://www.boun.edu.tr/en_US">Bogazi&#231;i University</a>, Istanbul, Turkey in 2014; and my M.S. degree in EECS from MIT in 2017. I did experimental research on magnetic resonance imaging (MRI) for my Master's thesis. Part of my thesis work appeared in the <i>24th Annual Meeting of International Society for Magnetic Resonance in Medicine (ISMRM)</i>, Singapore, 2016; and received a <a href="https://www.ismrm.org/16/program_files/O61.htm"><i>summa cum laude</i> award</a> (top 5% of all submitted works). Slides of my talk is available <a href="files/ISMRM_Slides.pdf">here</a>. 
+laude</i>) in <a href="https://ee.boun.edu.tr">Electrical and Electronics Engineering</a> from <a href="http://www.boun.edu.tr/en_US">Bogazi&#231;i University</a>, Istanbul, Turkey in 2014; and my M.S. degree in EECS from MIT in 2017. I did experimental research on magnetic resonance imaging (MRI) for my Master's thesis. Part of my M.S. thesis work appeared in the <i>24th Annual Meeting of International Society for Magnetic Resonance in Medicine (ISMRM)</i>, Singapore, 2016; it received a <a href="https://www.ismrm.org/16/program_files/O61.htm"><i>summa cum laude</i> award</a> (top 5% of all submitted works, see my talk <a href="files/ISMRM_Slides.pdf">here</a>). 
 <br>
 <br>
 I am a proud graduate of <a href="https://en.wikipedia.org/wiki/Ankara_Science_High_School">Ankara Science High School (AFL)</a>, class of 2010.
