--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@ Matt Emschwiller, David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 
  <h2>Conference Papers</h2>
 
+  <p>
+<strong>Sample Complexity of Recovering Low Rank Tensors from Symmetric Rank-One Measurements</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i> Algorithmic Learning Theory (ALT), 2025 </i>
+</p>
+
  <p>
 <strong>A Random CSP with Connections to Discrepancy Theory and Randomized
 Trials</strong>
@@ -188,7 +196,7 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Will Perkins, Changji Xu
 <br>
 <i>IEEE Symposium on Foundations of Computer Science (FOCS), 2022</i>
 <br>
-<a href="https://arxiv.org/abs/2203.15667" target="_blank">[Paper]</a> <a href="files/PerceptronTalk.pdf" target="_blank">[Slides]</a> <a href="files/PerceptronPoster.pdf" target="_blank">[Poster]</a>
+<a href="https://arxiv.org/abs/2203.15667" target="_blank">[Paper]</a> <a href="files/PerceptronTalk.pdf" target="_blank">[Slides]</a> <a href="https://vimeo.com/user39621409/review/768803643/7d18972c56#t=20m14s" target="_blank">[Talk]</a> <a href="files/PerceptronPoster.pdf" target="_blank">[Poster]</a>
 </p>
 
 
