--- a/index.html
+++ b/index.html
@@ -150,11 +150,14 @@ Matt Emschwiller, David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
  <h2>Conference Papers</h2>
 
   <p>
-<strong>Sample Complexity of Recovering Low Rank Tensors from Symmetric Rank-One Measurements</strong>
+<strong>Information-Theoretic Guarantees for Recovering Low-rank Tensors from Symmetric
+Rank-One Measurements.</strong>
 <br>
 Eren C. K&#305;z&#305;lda&#287
 <br>
 <i> Algorithmic Learning Theory (ALT), 2025 </i>
+<br>
+<a href="https://arxiv.org/abs/2502.05134" target="_blank">[Paper]</a> 
 </p>
 
  <p>
