--- a/index.html
+++ b/index.html
@@ -37,33 +37,12 @@ My research is a mix of probability, statistics and data science, and computer s
 
  <h2>Journal Papers and Preprints</h2>
 
-<p>
-<strong>Planted Random Number Partitioning Problem</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Under review, 2024+</i>
-<br>
-<a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a>
-</p>
-
-
-<p>
-<strong>Sharp Phase Transition for Multi Overlap Gap Property in Ising p-Spin Glass and Random k-SAT Models</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Under review, 2024+</i>
-<br>
-<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
-</p>
-
- <p>
+  <p>
 <strong>Shattering in the Ising Pure p-Spin Model</strong>
 <br>
 David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Under review, 2024+</i>
+<i>Probability Theory and Related Fields (To Appear), 2025+</i>
 <br>
 <a href="https://arxiv.org/abs/2307.07461" target="_blank">[Paper]</a> 
 </p>
@@ -79,6 +58,16 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <a href="https://arxiv.org/abs/2103.01369" target="_blank">[Paper]</a> <a href="files/OGPinNPP.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar" target="_blank">[Talk]</a> <a href="files/cornell_poster.pdf" target="_blank">[Poster]</a>
 <br>
 <a href="https://ieeexplore.ieee.org/document/9834647" target="_blank">Conference version</a> in <i>ISIT 2022</i>
+</p>
+
+<p>
+<strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Under review, 2025+</i>
+<br>
+<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
 </p>
 
 
@@ -148,6 +137,16 @@ Matt Emschwiller, David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 
 
  <h2>Conference Papers</h2>
+
+ <p>
+<strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Approximation, Randomization, and Combinatorial Optimization. Algorithms and Techniques (APPROX/RANDOM) 2025</i>
+<br>
+<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
+</p>
 
   <p>
 <strong>Information-Theoretic Guarantees for Recovering Low-rank Tensors from Symmetric
