--- a/index.html
+++ b/index.html
@@ -35,16 +35,69 @@ e-mail : <a href="mailto:kizildag@illinois.edu">kizildag@illinois.edu </a>
 <h2>Research Interests</h2>
 My research is a mix of probability, statistics and data science, and computer science. I am particularly interested in understanding statistical-computational trade-offs in large scale random models, including random optimization problems and statistical inference models, as well as in the mathematics of data science.
 
- <h2>Journal Papers and Preprints</h2>
+<h2>Preprints</h2>
+
+   <p>
+<strong>Sharp Online Hardness for Large Balanced Independent Sets</strong>
+<br>
+Abhishek Dhawan, Eren C. K&#305;z&#305;lda&#287, Neeladri Maitra
+<br>
+<i>Under review, 2025+</i>
+<br>
+<a href="https://arxiv.org/abs/2508.20785" target="_blank">[Paper]</a> 
+</p>
 
   <p>
-<strong>Shattering in the Ising Pure p-Spin Model</strong>
+<strong>Optimal Hardness of Online Algorithms for Large Independent Sets</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Lutz Warnke
+<br>
+<i>Under review, 2025+</i>
+<br>
+<a href="https://arxiv.org/abs/2504.11450" target="_blank">[Paper]</a> 
+</p>
+
+  <p>
+<strong>Large Average Subtensor Problem: Ground-State, Algorithms, and Algorithmic Barriers</strong>
+<br>
+Abhishek Hegade K. R., Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Under review, 2025+</i>
+<br>
+<a href="https://arxiv.org/abs/2506.17118" target="_blank">[Paper]</a> 
+</p>
+
+
+ <p>
+<strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Under review, 2025+</i>
+<br>
+<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
+</p>
+
+ <p>
+<strong>Planted Number Partitioning Problem</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Under review, 2025+</i>
+<br>
+<a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a> 
+</p>
+
+ <h2>Journal Papers</h2>
+
+  <p>
+<strong>Shattering in the Ising p-Spin Glass Model</strong>
 <br>
 David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
 <br>
-<i>Probability Theory and Related Fields (To Appear), 2025+</i>
+<i>Probability Theory and Related Fields, 2025</i>
 <br>
-<a href="https://arxiv.org/abs/2307.07461" target="_blank">[Paper]</a> 
+<a href="https://link.springer.com/article/10.1007/s00440-025-01414-4" target="_blank">[Paper]</a> 
 </p>
 
 
@@ -59,17 +112,6 @@ David Gamarnik, Eren C. K&#305;z&#305;lda&#287
 <br>
 <a href="https://ieeexplore.ieee.org/document/9834647" target="_blank">Conference version</a> in <i>ISIT 2022</i>
 </p>
-
-<p>
-<strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Under review, 2025+</i>
-<br>
-<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
-</p>
-
 
 
 <p>
@@ -89,7 +131,6 @@ Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
 <br>
 <i>Preprint, 2023</i>
 </p>
-
 
 <p>
 <strong>Self-Regularity of Non-Negative Output Weights for Overparameterized Two-Layer Neural Networks</strong>
@@ -136,6 +177,7 @@ Matt Emschwiller, David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 </p>
 
 
+
  <h2>Conference Papers</h2>
 
  <p>
@@ -145,7 +187,7 @@ Eren C. K&#305;z&#305;lda&#287
 <br>
 <i>Approximation, Randomization, and Combinatorial Optimization. Algorithms and Techniques (APPROX/RANDOM) 2025</i>
 <br>
-<a href="https://arxiv.org/abs/2309.09913" target="_blank">[Paper]</a> 
+<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.APPROX/RANDOM.2025.48" target="_blank">[Paper]</a> <a href= "files/APPROX/RANDOM_2025.pdf" target="_blank">[Slides]</a> 
 </p>
 
   <p>
