--- a/index.html
+++ b/index.html
@@ -35,7 +35,125 @@ e-mail : <a href="mailto:kizildag@illinois.edu">kizildag@illinois.edu </a>
 <h2>Research Interests</h2>
 My research is a mix of probability, statistics and data science, and computer science. I am particularly interested in understanding statistical-computational trade-offs in large scale random models, including random optimization problems and statistical inference models, as well as in the mathematics of data science.
 
-<h2>Preprints</h2>
+
+ <h2>Journals and Full Conference Papers</h2>
+
+  <p>
+<strong>Shattering in the Ising p-Spin Glass Model</strong>
+<br>
+David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Probability Theory and Related Fields, 2025</i>
+<br>
+<a href="https://link.springer.com/article/10.1007/s00440-025-01414-4" target="_blank">[Paper]</a> 
+</p>
+
+<p>
+<strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Approximation, Randomization, and Combinatorial Optimization. Algorithms and Techniques (APPROX/RANDOM) 2025</i>
+<br>
+<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.APPROX/RANDOM.2025.48" target="_blank">[Paper]</a> <a href= "files/APPROX/RANDOM_2025.pdf" target="_blank">[Slides]</a> 
+</p>
+
+  <p>
+<strong>Information-Theoretic Guarantees for Recovering Low-rank Tensors from Symmetric
+Rank-One Measurements.</strong>
+<br>
+Eren C. K&#305;z&#305;lda&#287
+<br>
+<i> Algorithmic Learning Theory (ALT), 2025 </i>
+<br>
+<a href="https://arxiv.org/abs/2502.05134" target="_blank">[Paper]</a> 
+</p>
+
+ <p>
+<strong>Algorithmic Obstructions in the Random Number Partitioning Problem</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Annals of Applied Probability, 2023</i>
+<br>
+<a href="https://arxiv.org/abs/2103.01369" target="_blank">[Paper]</a> <a href="files/OGPinNPP.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar" target="_blank">[Talk]</a> <a href="files/cornell_poster.pdf" target="_blank">[Poster]</a>
+<br>
+<a href="https://ieeexplore.ieee.org/document/9834647" target="_blank">Conference version</a> in <i>ISIT 2022</i>
+</p>
+
+
+<p>
+<strong>Stationary Points of Shallow Neural Networks with Quadratic Activation Function</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
+<br>
+<i>Mathematics of Operations Research, 2024</i>
+<br>
+<a href="https://arxiv.org/abs/1912.01599" target="_blank">[Paper]</a> <a href="files/QuadraticTalk.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=iQAur0NweGw&ab_channel=MachineLearningatMIT" target="_blank">[Talk]</a>
+</p>
+
+
+<p>
+<strong>Geometric Barriers for Stable and Online Algorithms for Discrepancy Minimization</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Will Perkins, Changji Xu
+<br>
+<i>Conference on Learning Theory (COLT), 2023</i>
+<br>
+<a href="https://proceedings.mlr.press/v195/gamarnik23a/gamarnik23a.pdf" target="_blank">[Paper]</a> 
+</p>
+
+
+
+<p>
+<strong>Algorithms and Barriers in the Symmetric Binary Perceptron Model</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Will Perkins, Changji Xu
+<br>
+<i>IEEE Symposium on Foundations of Computer Science (FOCS), 2022</i>
+<br>
+<a href="https://arxiv.org/abs/2203.15667" target="_blank">[Paper]</a> <a href="files/PerceptronTalk.pdf" target="_blank">[Slides]</a> <a href="https://vimeo.com/user39621409/review/768803643/7d18972c56#t=20m14s" target="_blank">[Talk]</a> <a href="files/PerceptronPoster.pdf" target="_blank">[Poster]</a>
+</p>
+
+
+
+
+<p>
+<strong>Self-Regularity of Non-Negative Output Weights for Overparameterized Two-Layer Neural Networks</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
+<br>
+<i>IEEE Transactions on Signal Processing, 2022</i>
+<br>
+<a href="https://ieeexplore.ieee.org/document/9729548" target="_blank">[Paper]</a> <a href="files/ISIT2021.pdf" target="_blank">[Slides]</a> 
+<br>
+<a href="https://ieeexplore.ieee.org/abstract/document/9517811" target="_blank">Conference version</a>  in <i>ISIT 2021</i>
+</p>
+
+<p>
+<strong>Computing the Partition Function of the Sherrington-Kirkpatrick Model is Hard on Average</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287
+<br>
+<i>Annals of Applied Probability, 2021</i>
+<br>
+<a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-31/issue-3/Computing-the-partition-function-of-the-SherringtonKirkpatrick-model-is-hard/10.1214/20-AAP1625.full" target="_blank">[Paper]</a> <a href="files/ISIT2020.pdf" target="_blank">[Slides]</a> 
+<br>
+<a href="https://ieeexplore.ieee.org/document/9174373" target="_blank">Conference version</a> in <i>ISIT 2020</i>
+</p>
+
+<p>
+<strong>Inference in High-Dimensional Linear Regression via Lattice Basis Reduction and Integer Relation Detection</strong>
+<br>
+David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
+<br>
+<i>IEEE Transactions on Information Theory, 2021</i>
+<br>
+<a href="https://ieeexplore.ieee.org/document/9541171" target="_blank">[Paper]</a> 
+</p>
+
+
+<h2>Preprints and Papers Under Review</h2>
 
    <p>
 <strong>Sharp Online Hardness for Large Balanced Independent Sets</strong>
@@ -88,82 +206,12 @@ Eren C. K&#305;z&#305;lda&#287
 <a href="https://arxiv.org/abs/2309.15115" target="_blank">[Paper]</a> 
 </p>
 
- <h2>Journal Papers</h2>
-
-  <p>
-<strong>Shattering in the Ising p-Spin Glass Model</strong>
-<br>
-David Gamarnik, Aukosh Jagannath, Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Probability Theory and Related Fields, 2025</i>
-<br>
-<a href="https://link.springer.com/article/10.1007/s00440-025-01414-4" target="_blank">[Paper]</a> 
-</p>
-
-
- <p>
-<strong>Algorithmic Obstructions in the Random Number Partitioning Problem</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Annals of Applied Probability, 2023</i>
-<br>
-<a href="https://arxiv.org/abs/2103.01369" target="_blank">[Paper]</a> <a href="files/OGPinNPP.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=xQolif3PvsQ&ab_channel=SNAPPSeminar" target="_blank">[Talk]</a> <a href="files/cornell_poster.pdf" target="_blank">[Poster]</a>
-<br>
-<a href="https://ieeexplore.ieee.org/document/9834647" target="_blank">Conference version</a> in <i>ISIT 2022</i>
-</p>
-
-
-<p>
-<strong>Stationary Points of Shallow Neural Networks with Quadratic Activation Function</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
-<br>
-<i>Mathematics of Operations Research, 2024</i>
-<br>
-<a href="https://arxiv.org/abs/1912.01599" target="_blank">[Paper]</a> <a href="files/QuadraticTalk.pdf" target="_blank">[Slides]</a> <a href="https://www.youtube.com/watch?v=iQAur0NweGw&ab_channel=MachineLearningatMIT" target="_blank">[Talk]</a>
-</p>
-
 <p>
 <strong>Symmetric Binary Perceptron with Random Labels: Capacity, Universality, and Overlap Gap Property</strong>
 <br>
 Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
 <br>
 <i>Preprint, 2023</i>
-</p>
-
-<p>
-<strong>Self-Regularity of Non-Negative Output Weights for Overparameterized Two-Layer Neural Networks</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
-<br>
-<i>IEEE Transactions on Signal Processing, 2022</i>
-<br>
-<a href="https://ieeexplore.ieee.org/document/9729548" target="_blank">[Paper]</a> <a href="files/ISIT2021.pdf" target="_blank">[Slides]</a> 
-<br>
-<a href="https://ieeexplore.ieee.org/abstract/document/9517811" target="_blank">Conference version</a>  in <i>ISIT 2021</i>
-</p>
-
-<p>
-<strong>Computing the Partition Function of the Sherrington-Kirkpatrick Model is Hard on Average</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Annals of Applied Probability, 2021</i>
-<br>
-<a href="https://projecteuclid.org/journals/annals-of-applied-probability/volume-31/issue-3/Computing-the-partition-function-of-the-SherringtonKirkpatrick-model-is-hard/10.1214/20-AAP1625.full" target="_blank">[Paper]</a> <a href="files/ISIT2020.pdf" target="_blank">[Slides]</a> 
-<br>
-<a href="https://ieeexplore.ieee.org/document/9174373" target="_blank">Conference version</a> in <i>ISIT 2020</i>
-</p>
-
-<p>
-<strong>Inference in High-Dimensional Linear Regression via Lattice Basis Reduction and Integer Relation Detection</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
-<br>
-<i>IEEE Transactions on Information Theory, 2021</i>
-<br>
-<a href="https://ieeexplore.ieee.org/document/9541171" target="_blank">[Paper]</a> 
 </p>
 
 <p>
@@ -178,28 +226,8 @@ Matt Emschwiller, David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Ilias Zadik
 
 
 
- <h2>Conference Papers</h2>
+ <h2>Conference Proceedings</h2>
 
- <p>
-<strong>Sharp Thresholds for the Overlap Gap Property: Ising p-Spin Glass and Random k-SAT</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i>Approximation, Randomization, and Combinatorial Optimization. Algorithms and Techniques (APPROX/RANDOM) 2025</i>
-<br>
-<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.APPROX/RANDOM.2025.48" target="_blank">[Paper]</a> <a href= "files/APPROX/RANDOM_2025.pdf" target="_blank">[Slides]</a> 
-</p>
-
-  <p>
-<strong>Information-Theoretic Guarantees for Recovering Low-rank Tensors from Symmetric
-Rank-One Measurements.</strong>
-<br>
-Eren C. K&#305;z&#305;lda&#287
-<br>
-<i> Algorithmic Learning Theory (ALT), 2025 </i>
-<br>
-<a href="https://arxiv.org/abs/2502.05134" target="_blank">[Paper]</a> 
-</p>
 
  <p>
 <strong>A Random CSP with Connections to Discrepancy Theory and Randomized
@@ -212,16 +240,6 @@ Eren C. K&#305;z&#305;lda&#287
 <a href="files/ISIT-2024-Full.pdf" target="_blank">[Extended Paper]</a> <a href="files/Kizildag_ISIT_2024.pdf" target="_blank">[Slides]</a>
 </p>
 
-<p>
-<strong>Geometric Barriers for Stable and Online Algorithms for Discrepancy Minimization</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Will Perkins, Changji Xu
-<br>
-<i>Conference on Learning Theory (COLT), 2023</i>
-<br>
-<a href="https://proceedings.mlr.press/v195/gamarnik23a/gamarnik23a.pdf" target="_blank">[Paper]</a> 
-</p>
-
 
 <p>
 <strong>Symmetric Perceptron with Random Labels</strong>
@@ -231,16 +249,6 @@ Eren C. K&#305;z&#305;lda&#287, Tanay Wakhare
 <i>International Conference on Sampling Theory and Applications (SampTA), 2023</i>
 <br>
 <a href="https://openreview.net/forum?id=eOrFIRhZ2cj" target="_blank">[Paper]</a> <a href="files/SampTAslides.pdf" target="_blank">[Slides]</a> 
-</p>
-
-<p>
-<strong>Algorithms and Barriers in the Symmetric Binary Perceptron Model</strong>
-<br>
-David Gamarnik, Eren C. K&#305;z&#305;lda&#287, Will Perkins, Changji Xu
-<br>
-<i>IEEE Symposium on Foundations of Computer Science (FOCS), 2022</i>
-<br>
-<a href="https://arxiv.org/abs/2203.15667" target="_blank">[Paper]</a> <a href="files/PerceptronTalk.pdf" target="_blank">[Slides]</a> <a href="https://vimeo.com/user39621409/review/768803643/7d18972c56#t=20m14s" target="_blank">[Talk]</a> <a href="files/PerceptronPoster.pdf" target="_blank">[Poster]</a>
 </p>
 
 
